# Sphinx-Tree-View

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: conf.py  config.md  index.md  usage.md
sphinx_treeview/: __init__.py  tree.css.jinja  treeview.py
sphinx_treeview/_static/stv/: treeview.js
